session1/bloc1/5-netpol/netpol/allow-everything.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-everything
spec:
  podSelector: {}
