session1/bloc1/5-netpol/netpol/allow-from-hilo-2.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ns-hilo-2
  namespace: hilo-1
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hilo-2
    - from:
        - podSelector: {}
