session1/bloc1/5-netpol/netpol/allow-from-local-pods.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-local-pods
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
