session1/bloc1/5-netpol/netpol/example-2.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-essential-namespaces
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          namespace: ingress-nginx
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
  podSelector: {}
  policyTypes:
  - Ingress
