session1/bloc1/5-netpol/netpol/example-egress.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: untitled-policy
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 10.20.0.0/16
      ports:
        - port: 80
        - port: 443
    - to:
        - podSelector:
            matchLabels:
              tier: backend
    - to:
        - namespaceSelector:
            matchLabels:
              tier: backend
          podSelector:
            matchLabels:
              app: mariadb
      ports:
        - port: 3306
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
