session1/bloc1/5-netpol/netpol/example-ingress.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: untitled-policy
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: ns1
          podSelector:
            matchLabels:
              pod: pod1
    - from:
        - podSelector:
            matchLabels:
              local-pod: foo
    - from:
        - podSelector:
            matchLabels:
              version: "3"
            matchExpressions:
              - key: env
                operator: In
                values:
                  - stg
                  - prd
      ports:
        - port: 80
    - from:
        - ipBlock:
            cidr: 10.10.0.0/16
